# Supersight-take-home-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.pipeline  README.md  docker-compose.yml  pyproject.toml  setup_data.py
api/: main.py  models.py  queries.py
database/: config.py  create_table.py  models.py
docs/: DESIGN.md
pipeline/: ingest.py  ingestion.py  load.py  run.py  transform.py
